Fixed alignment of search bar and button

--- a/src/index.css
+++ b/src/index.css
@@ -1061,7 +1061,6 @@
   input[type=text] {
       border-radius:25px;
       width:60%;
-      margin-top:20px;
       border-color:rgb(40, 92, 233);
   }
 
